fixed bug a restore mobile parallax

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!--Header Landing Page-->
 
-   <header id="head" class="smooth-container">
+   <header id="head" >
       <div class="landing">
          <div class="landing-content-position">
             <div class="landing-content">
@@ -53,7 +53,7 @@
 
 <!--About Page-->
 
-   <section id="about" class="smooth-container">
+   <section id="about" >
       <h1 class="about-qst"> What About me?</h1>
       <img  class="propic" src="assets/images/propic/propic.png" alt="Profile Photo">
 
@@ -87,7 +87,7 @@
 
 <!--Skills Page-->
 
-   <section id="skills" class="smooth-container">
+   <section id="skills" >
       <div class="skills-container">
          <div class="skills-position">
             <div class="skills-content">
@@ -109,7 +109,7 @@
 
 <!--Contacts Page-->
 
-   <section id="contacts" class="smooth-container">
+   <section id="contacts" >
 
       <h2 class="get-touch">Still curious? <br> Let's get in touch!</h2>
 
