Added  transition animation to links

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="landing-content">
                <p class="landing-hello">Hello I'm</p>
                <img src="assets/images/name/name.svg"  class="img-name" alt="Filippo Floramo">
-               <p class="landing-payoff"> a passionate <br> full stack developer.</p>
+               <p class="landing-payoff"> an aspiring<br> full stack developer.</p>
             </div>
          </div>
       </div>
@@ -54,7 +54,7 @@
 <!--About Page-->
 
    <section id="about" >
-      <h1 class="about-qst"> What About me?</h1>
+      <h1 class="about-qst">About me</h1>
       <img  class="propic" src="assets/images/propic/propic.png" alt="Profile Photo">
 
       <div class="about-container">
