fixed grammar error beacause Marié  noticed it

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <div class="about-container">
          <div class="about-story">
-            <p> I'm just curious guy who fell in love with coding while studying Digital Marketing on the platform
+            <p> I'm just a curious guy who fell in love with coding while studying Digital Marketing on the platform
                 <a class="s2i"   href="https://www.start2impact.it/" target="_blank"> Start2impact</a>. <br> Everytime I write some lines of code, I get excited about the fact of creating something from scratch and see it come to life in front of the screen. </p>
 
              <p>  With that in mind, I decided to shift my field of study and fully jump into this world of strings and functions.</p> 
